--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,24 @@
 # Base configs
-baseurl: "https://photography.lorderikir.me"
+baseurl: "https://photos.lorderikir.me"
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Ram Patra"
-subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+title: "Photography by Eric Jiang"
+subtitle: "I build software, love travelling and enjoy taking photos"
+author: "Eric Jiang"
 header:
-  title: "Photography"
-  subtitle: "by Ram Patra"
+  title: "Photos"
+  subtitle: "by Eric Jiang"
 footer:
-  name: "Hey there, my name is Ram"
-  bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
-  github: 'Want a website like this for yourself for free? Just <a href="https://github.com/ramswaroop/photography">fork me on github</a> ;)'
+  name: "Hi there, I'm Eric"
+  bio: "I build software, love travelling and enjoy taking photos"
+  # github: 'Want a website like this for yourself for free? Just <a href="https://github.com/ramswaroop/photography">fork me on github</a> ;)'
 web_design: "AJ"
 social_urls:
-  facebook: "https://www.facebook.com/ramswaroop"
-  twitter: "https://www.twitter.com/ram__patra"
-  instagram: "https://www.instagram.com/ram_patra"
-  dribbble: "https://dribbble.com/rampatra"
-  linkedin: "https://in.linkedin.com/in/ram-patra"
-  github: "https://www.github.com/rampatra"
+  facebook: "https://www.facebook.com/lorderikir"
+  twitter: "https://www.twitter.com/lorderikir"
+  instagram: "https://www.instagram.com/lorderikir"
+  linkedin: "https://in.linkedin.com/in/ericjiang97"
+  github: "https://www.github.com/lorderikir"
