--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ subtitle: "I build software, love travelling and enjoy taking photos"
 author: "Eric Jiang"
 header:
   title: "Photos"
-  subtitle: "by Eric Jiang"
+  subtitle: "by Eric"
 footer:
   name: "Hi there, I'm Eric"
   bio: "I build software, love travelling and enjoy taking photos"
