--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A jekyll website for photographer cum developer",
   "main": "npmfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "bundle exec jekyll serve --baseurl=\"\""
   },
   "repository": {
     "type": "git",
